@@ -678,6 +678,14 @@ inst-names =   "('Port 1 Ethernet', 'Port 2 Ethernet',
             </p>
           </dd>
         </dl>
+          <dt><tt>use-gprint</tt></dt>
+          <dd>Default value: <i>false</i>
+            <p>
+              When this tag is set, the summary information for the target
+              will be embedded in the graph below the legend.
+            </p>
+          </dd>
+        </dl>
         <p>
           In addition, the following tags are set automatically by Cricket
           for your use in other tags in the target dictionary:
